# Janus

./: .gitignore  Cargo.toml  README.md  example.env  tables.sql
src/: discord.rs  dsek.rs  env.rs  main.rs  register.rs  server.rs  storage.rs
