[package]
name = "janus"
description = "dsek -> discord role sync"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.9.0"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
serde_urlencoded = "0.7.1"
tokio = { version = "1.43.0", features = ["full"] }
url-builder = "0.1.1"
uuid = { version = "1.13.2", features = ["v4"] }
